# priceflare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
priceflare/: __init__.py  exceptions.py  parsers.py  sentinel.py
tests/: test_sentinel.py
